<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="25dp"
        android:text="@string/textview_tittle"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/edittext_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_tittle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/edittext_min"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20sp"/>


    <EditText
        android:id="@+id/edittext_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_min"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edittext_max"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_max"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/button_generate"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_generate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/textview_result"
        android:textColor="#FF0101"
        android:textSize="40sp"
        android:textStyle="bold" />

</RelativeLayout>